--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.0.0",
     "jest": "^29.2.1",
