--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.17",
+    "expo": "^51.0.21",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -37,7 +37,7 @@
     "react-native-calendar-picker": "^8.0.4",
     "react-native-calendars": "^1.1305.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
   },
